--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,7 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 body {
@@ -11,6 +12,7 @@ body {
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
+    margin: 0;
 }
 
 #images {
@@ -19,28 +21,28 @@ body {
 }
 
 .image-div {
-    width: 300px;
-    height: 300px;
-    margin: 10px;
+    width: 30%;
+    height: 30%;
+    margin: 0;
 }
 
 img {
-    width: 300px;
-    border-radius: 30px;
+    width: 80%;
+    border-radius: 15%;
 }
 
 #header-div, #result {
     text-align: center;
     margin: 10px;
-    font-size: 40px;
+    font-size: 250%;
     color: white;
     font-family: 'Montserrat', sans-serif;
 }
 
 button {
     font-family: 'Montserrat', sans-serif; 
-    font-size: 30px;
-    border-radius: 10px;
+    font-size: 90%;
+    border-radius: 7px;
     border: 0px;
     color: black;
 }
@@ -55,82 +57,41 @@ button:disabled {
 }
 
 #play {
-    font-size: 35px;
+    font-size: 100%;
 }
 
 #result {
-    width: 940px;
-    height: 49px;
+    width: 100%;
+    height: 30%;
+    margin: 0;
 }
 
-@media (max-width: 932px) and (max-height: 430px) {
-    .image-div {
-        width: 130px;
-        height: 130px;
-        margin: 10px;
-    }
-    
-    img {
-        width: 130px;
-        border-radius: 30px;
-    }
-
-    #header-div, #result {
-        text-align: center;
-        margin: 10px;
-        font-size: 30px;
-        color: white;
-        font-family: 'Montserrat', sans-serif;
-    }
-
-    button {
-        font-family: 'Montserrat', sans-serif; 
-        font-size: 25px;
-        border-radius: 10px;
-        border: 0px;
-    }
-    #result {
-        width: 700px;
-        height: 40px;
-    }
-
-    #play {
-        font-size: 30px;
-    }
-}
 
 @media (max-width: 430px) and (max-height: 932px) {
-    .image-div {
-        width: 100px;
-        height: 100px;
+    img {
+        width: 95%;
+        border-radius: 15%;
         margin: 10px;
     }
-    
-    img {
-        width: 100px;
-        border-radius: 30px;
+
+    button {
+        font-family: 'Montserrat', sans-serif; 
+        font-size: 65%;
+        border-radius: 7px;
+        border: 0px;
+        color: black;
+        margin: 5px;
+    }
+
+    #play {
+        font-size: 80%;
     }
 
     #header-div, #result {
         text-align: center;
         margin: 10px;
-        font-size: 25px;
+        font-size: 200%;
         color: white;
         font-family: 'Montserrat', sans-serif;
-    }
-
-    button {
-        font-family: 'Montserrat', sans-serif; 
-        font-size: 20px;
-        border-radius: 10px;
-        border: 0px;
-    }
-    #result {
-        width: 400px;
-        height: 40px;
-    }
-
-    #play {
-        font-size: 30px;
     }
 }
