--- a/style/style.css
+++ b/style/style.css
@@ -95,3 +95,90 @@ button:disabled {
         font-family: 'Montserrat', sans-serif;
     }
 }
+
+@media (max-height: 420px) {
+    img {
+        width: 60%;
+        border-radius: 15%;
+        margin: 10px;
+    }
+
+    button {
+        font-family: 'Montserrat', sans-serif; 
+        font-size: 70%;
+        border-radius: 7px;
+        border: 0px;
+        color: black;
+        margin: 5px;
+    }
+
+    #play {
+        font-size: 70%;
+    }
+
+    #header-div, #result {
+        text-align: center;
+        margin: 10px;
+        font-size: 125%;
+        color: white;
+        font-family: 'Montserrat', sans-serif;
+    }
+}
+
+@media (max-height: 300px) {
+    img {
+        width: 40%;
+        border-radius: 15%;
+        margin: 10px;
+    }
+
+    button {
+        font-family: 'Montserrat', sans-serif; 
+        font-size: 67%;
+        border-radius: 4px;
+        border: 0px;
+        color: black;
+        margin: 5px;
+    }
+
+    #play {
+        font-size: 70%;
+    }
+
+    #header-div, #result {
+        text-align: center;
+        margin: 10px;
+        font-size: 97%;
+        color: white;
+        font-family: 'Montserrat', sans-serif;
+    }
+}
+
+@media (max-height: 200px) {
+    img {
+        width: 30%;
+        border-radius: 15%;
+        margin: 10px;
+    }
+
+    button {
+        font-family: 'Montserrat', sans-serif; 
+        font-size: 67%;
+        border-radius: 3px;
+        border: 0px;
+        color: black;
+        margin: 5px;
+    }
+
+    #play {
+        font-size: 70%;
+    }
+
+    #header-div, #result {
+        text-align: center;
+        margin: 10px;
+        font-size: 60%;
+        color: white;
+        font-family: 'Montserrat', sans-serif;
+    }
+}
